# BrainLLM

./: .gitignore  ADVANCED_MODULES.md  CMakeLists.txt  COGNITIVE_MODULES.md  FEATURES.md  FEATURES_COMPLETE.md  INDEX.md  MODULE_STRUCTURE.md  PROJECT_COMPLETION.md  QUANTUM_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  README_COMPLETE.md  build.bat  build.sh  config.ini  package.json  test_api.bat
docs/: QUANTUM_MODULES.md  QUANTUM_QUICK_REFERENCE.md  README_COMPLETE_V4.md  V4_RELEASE_SUMMARY.md
gui/: console_widget.cpp  editor_widget.cpp  main_window.cpp  menu_system.cpp  settings_dialog.cpp  visualization_widget.cpp
include/: advanced_architectures.h  advanced_learning.h  attention_mechanism.h  brain_types.h  cognitive_processes.h  comprehensive_brain.h  config_manager.h  console_widget.h  dialogue_personality.h  editor_widget.h  english_processor.h  grammar_linguistics.h  integrated_cognitive_module.h  knowledge_reasoning.h  llm_engine.h  main_window.h  memory_system.h  menu_system.h  multilingual_processor.h  neural_network.h  quantum_computing.h  quantum_llm_integration.h  request_handler.h  rest_server.h  robotics_laws.h  safety_security.h  sentience.h  settings_dialog.h  visualization_widget.h
src/: main_api.cpp  main_gui.cpp
src/advanced/: advanced_architectures.cpp  advanced_learning.cpp  comprehensive_brain.cpp  dialogue_personality.cpp  knowledge_reasoning.cpp  robotics_laws.cpp  safety_security.cpp  sentience.cpp
src/api/: endpoints.cpp  request_handler.cpp  rest_server.cpp
src/brain/: attention_mechanism.cpp  llm_engine.cpp  memory_system.cpp  neural_network.cpp
src/human_brain/: cognitive_processes.cpp  english_processor.cpp  grammar_linguistics.cpp  integrated_cognitive_module.cpp  multilingual_processor.cpp
src/quantum/: quantum_computing.cpp  quantum_llm_integration.cpp
src/settings/: config_manager.cpp
